--- a/frank/stylesheets/css/grid.css
+++ b/frank/stylesheets/css/grid.css
@@ -1,122 +1,266 @@
-.wrapper {
-  width: 980px;
-  min-width: 980px;
-  position: relative;
-  margin: 0 auto !important;
-  padding: 0 10px;
-  display: block; }
+/* Artfully Masterminded by ZURB */
+/* --------------------------------------------------
+	:: Grid
+	
+	This is the mobile-friendly, responsive grid that
+	lets Foundation work much of its magic.
+	
+	-------------------------------------------------- */
+.container {
+  padding: 0 20px; }
 
-.wrapper.showgrid {
-  background-image: url("../../images/grid_14col.png"); }
+.row {
+  width: 100%;
+  max-width: 980px;
+  min-width: 727px;
+  margin: 0 auto; }
 
-.span-1, .span-2, .span-3, .span-4, .span-5, .span-6, .span-7, .span-8, .span-9, .span-10, .span-11, .span-12 {
+/* To fix the grid into a certain size, set max-width to width */
+.row .row {
+  min-width: 0; }
+
+.column, .columns {
+  margin-left: 4.4%;
   float: left;
-  margin-right: 40px; }
+  min-height: 1px;
+  position: relative; }
 
-.last {
-  margin-right: 0; }
+.column:first-child, .columns:first-child {
+  margin-left: 0; }
 
-section.last {
-  margin-right: 0; }
+[class*="column"] + [class*="column"]:last-child {
+  float: right; }
 
-.span-1 {
-  width: 45px; }
+.row .one {
+  width: 4.3%; }
 
-.span-2 {
-  width: 130px; }
+.row .two {
+  width: 13%; }
 
-.span-3 {
-  width: 215px; }
+.row .three {
+  width: 21.679%; }
 
-.span-4 {
-  width: 300px; }
+.row .four {
+  width: 30.37%; }
 
-.span-5 {
-  width: 385px; }
+.row .five {
+  width: 39.1%; }
 
-.span-6 {
-  width: 470px; }
+.row .six {
+  width: 47.8%; }
 
-.span-7 {
-  width: 555px; }
+.row .seven {
+  width: 56.5%; }
 
-.span-8 {
-  width: 640px; }
+.row .eight {
+  width: 65.2%; }
 
-.span-9 {
-  width: 725px; }
+.row .nine {
+  width: 73.9%; }
 
-.span-10 {
-  width: 810px; }
+.row .ten {
+  width: 82.6%; }
 
-.span-11 {
-  width: 895px; }
+.row .eleven {
+  width: 91.3%; }
 
-.span-12 {
-  width: 980px; }
+.row .twelve {
+  width: 100%; }
 
-.suffix-1 {
-  padding-right: 85px; }
+.row .offset-by-one {
+  margin-left: 13.1%; }
 
-.suffix-2 {
-  padding-right: 170px; }
+.row .offset-by-two {
+  margin-left: 21.8%; }
 
-.suffix-3 {
-  padding-right: 255px; }
+.row .offset-by-three {
+  margin-left: 30.5%; }
 
-.suffix-4 {
-  padding-right: 340px; }
+.row .offset-by-four {
+  margin-left: 39.2%; }
 
-.suffix-5 {
-  padding-right: 425px; }
+.row .offset-by-five {
+  margin-left: 47.9%; }
 
-.suffix-6 {
-  padding-right: 510px; }
+.row .offset-by-six {
+  margin-left: 56.6%; }
 
-.suffix-7 {
-  padding-right: 595px; }
+.row .offset-by-seven {
+  margin-left: 65.3%; }
 
-.suffix-8 {
-  padding-right: 680px; }
+.row .offset-by-eight {
+  margin-left: 74.0%; }
 
-.suffix-9 {
-  padding-right: 765px; }
+.row .offset-by-nine {
+  margin-left: 82.7%; }
 
-.suffix-10 {
-  padding-right: 850px; }
+.row .offset-by-ten {
+  margin-left: 91.4%; }
 
-.suffix-11 {
-  padding-right: 935px; }
+.row .centered {
+  float: none;
+  margin: 0 auto; }
 
-.prefix-1 {
-  padding-left: 85px; }
+.row .offset-by-one:first-child {
+  margin-left: 8.7%; }
 
-.prefix-2 {
-  padding-left: 170px; }
+.row .offset-by-two:first-child {
+  margin-left: 17.4%; }
 
-.prefix-3 {
-  padding-left: 255px; }
+.row .offset-by-three:first-child {
+  margin-left: 26.1%; }
 
-.prefix-4 {
-  padding-left: 340px; }
+.row .offset-by-four:first-child {
+  margin-left: 34.8%; }
 
-.prefix-5 {
-  padding-left: 425px; }
+.row .offset-by-five:first-child {
+  margin-left: 43.5%; }
 
-.prefix-6 {
-  padding-left: 510px; }
+.row .offset-by-six:first-child {
+  margin-left: 52.2%; }
 
-.prefix-7 {
-  padding-left: 595px; }
+.row .offset-by-seven:first-child {
+  margin-left: 60.9%; }
 
-.prefix-8 {
-  padding-left: 680px; }
+.row .offset-by-eight:first-child {
+  margin-left: 69.6%; }
 
-.prefix-9 {
-  padding-left: 765px; }
+.row .offset-by-nine:first-child {
+  margin-left: 78.3%; }
 
-.prefix-10 {
-  padding-left: 850px; }
+.row .offset-by-ten:first-child {
+  margin-left: 87%; }
 
-.prefix-11 {
-  padding-left: 935px; }
+.row .offset-by-eleven:first-child {
+  margin-left: 95.7%; }
+
+/* Source Ordering */
+.push-two {
+  left: 17.4%; }
+
+.push-three {
+  left: 26.1%; }
+
+.push-four {
+  left: 34.8%; }
+
+.push-five {
+  left: 43.5%; }
+
+.push-six {
+  left: 52.2%; }
+
+.push-seven {
+  left: 60.9%; }
+
+.push-eight {
+  left: 69.6%; }
+
+.push-nine {
+  left: 78.3%; }
+
+.push-ten {
+  left: 87%; }
+
+.pull-two {
+  right: 17.4%; }
+
+.pull-three {
+  right: 26.1%; }
+
+.pull-four {
+  right: 34.8%; }
+
+.pull-five {
+  right: 43.5%; }
+
+.pull-six {
+  right: 52.2%; }
+
+.pull-seven {
+  right: 60.9%; }
+
+.pull-eight {
+  right: 69.6%; }
+
+.pull-nine {
+  right: 78.3%; }
+
+.pull-ten {
+  right: 87%; }
+
+img, object, embed {
+  max-width: 100%;
+  height: auto; }
+
+img {
+  -ms-interpolation-mode: bicubic; }
+
+#map_canvas img, .map_canvas img {
+  max-width: none!important; }
+
+/* Nicolas Gallagher's micro clearfix */
+.row:before, .row:after, .clearfix:before, .clearfix:after {
+  content: "";
+  display: table; }
+
+.row:after, .clearfix:after {
+  clear: both; }
+
+.row, .clearfix {
+  zoom: 1; }
+
+/*	--------------------------------------------------
+	:: Block grids
+	
+	These are 2-up, 3-up, 4-up and 5-up ULs, suited
+	for repeating blocks of content. Add 'mobile' to
+	them to switch them just like the layout grid
+	(one item per line) on phones
+	
+	For IE7/8 compatibility block-grid items need to be
+	the same height. You can optionally uncomment the
+	lines below to support arbitrary height, but know
+	that IE7/8 do not support :nth-child.
+	-------------------------------------------------- */
+.block-grid {
+  display: block;
+  overflow: hidden; }
+
+.block-grid > li {
+  display: block;
+  height: auto;
+  float: left; }
+
+.block-grid.two-up {
+  margin-left: -4%; }
+
+.block-grid.two-up > li {
+  margin-left: 4%;
+  width: 46%; }
+
+/* 	.block-grid.two-up>li:nth-child(2n+1) {clear: left;} */
+.block-grid.three-up {
+  margin-left: -2%; }
+
+.block-grid.three-up > li {
+  margin-left: 2%;
+  width: 31.3%; }
+
+/* 	.block-grid.three-up>li:nth-child(3n+1) {clear: left;} */
+.block-grid.four-up {
+  margin-left: -2%; }
+
+.block-grid.four-up > li {
+  margin-left: 2%;
+  width: 23%; }
+
+/* 	.block-grid.four-up>li:nth-child(4n+1) {clear: left;} */
+.block-grid.five-up {
+  margin-left: -1.5%; }
+
+.block-grid.five-up > li {
+  margin-left: 1.5%;
+  width: 18.5%; }
+
+/* 	.block-grid.five-up>li:nth-child(5n+1) {clear: left;} */
