--- a/frank/stylesheets/css/widgets.css
+++ b/frank/stylesheets/css/widgets.css
@@ -1,6 +1,6 @@
 .widget {
   float: left;
-  margin: 0 40px 15px 0; }
+  margin-bottom: 15px; }
   .widget h3 {
     font-size: 13px;
     line-height: 19px;
@@ -9,26 +9,17 @@
     text-overflow: ellipsis;
     -o-text-overflow: ellipsis; }
 
-.widget.fourup {
-  width: 215px; }
-
 .widget.fourup:nth-child(4n) {
   margin-right: 0; }
 
 .widget.fourup:nth-child(4n+1) {
   clear: left; }
 
-.widget.threeup {
-  width: 300px; }
-
 .widget.threeup:nth-child(3n) {
   margin-right: 0; }
 
 .widget.threeup:nth-child(3n+1) {
   clear: left; }
-
-.widget.twoup {
-  width: 470px; }
 
 .widget.twoup:nth-child(2n) {
   margin-right: 0; }
