--- a/frank/stylesheets/scss/grid.scss
+++ b/frank/stylesheets/scss/grid.scss
@@ -1,125 +1,126 @@
-@import "variables";
+/* Artfully Masterminded by ZURB */
 
-.wrapper {
-	width: $column-width * 12 + $gutter-width * 11;
-	min-width:980px;
-	position: relative;
-	margin: 0 auto !important;
-	padding:0 10px;
-	display: block; 
-	}
-
-.wrapper.showgrid {
-	background-image: url("../../images/grid_14col.png"); }
+/* --------------------------------------------------
+	:: Grid
 	
-.span-1, .span-2, .span-3, .span-4, .span-5, .span-6, .span-7, .span-8, .span-9, .span-10, .span-11, .span-12 {
-	float: left;
-	margin-right: $gutter-width; }
+	This is the mobile-friendly, responsive grid that
+	lets Foundation work much of its magic.
+	
+	-------------------------------------------------- */
 
-.last {
-	margin-right: 0; }
+	.container { padding: 0 20px; }
+	
+	.row { width: 100%; max-width: 980px; min-width: 727px; margin: 0 auto; }
+	/* To fix the grid into a certain size, set max-width to width */
+	.row .row { min-width: 0; }
+	
+	.column, .columns { margin-left: 4.4%; float: left; min-height: 1px; position: relative; }
+	.column:first-child, .columns:first-child { margin-left: 0; }
+	[class*="column"] + [class*="column"]:last-child { float: right; }
+	
+	.row .one 		{ width: 4.3%; }
+	.row .two 		{ width: 13%; }
+	.row .three 	{ width: 21.679%; }
+	.row .four 		{ width: 30.37%; }
+	.row .five 		{ width: 39.1%; }
+	.row .six 		{ width: 47.8%; }
+	.row .seven 	{ width: 56.5%; }
+	.row .eight 	{ width: 65.2%; }
+	.row .nine 		{ width: 73.9%; }
+	.row .ten 		{ width: 82.6%; }
+	.row .eleven 	{ width: 91.3%; }
+	.row .twelve 	{ width: 100%; }
+	
+	.row .offset-by-one 	{ margin-left: 13.1%;  }
+	.row .offset-by-two 	{ margin-left: 21.8%;  }
+	.row .offset-by-three 	{ margin-left: 30.5%;  }
+	.row .offset-by-four 	{ margin-left: 39.2%;  }
+	.row .offset-by-five 	{ margin-left: 47.9%;  }
+	.row .offset-by-six 	{ margin-left: 56.6%;  }
+	.row .offset-by-seven 	{ margin-left: 65.3%;  }
+	.row .offset-by-eight 	{ margin-left: 74.0%;  }
+	.row .offset-by-nine 	{ margin-left: 82.7%;  }
+	.row .offset-by-ten 	{ margin-left: 91.4%;  }
+	
+	.row .centered { float: none; margin: 0 auto; }
 
-section.last {
-	margin-right: 0; }
+	.row .offset-by-one:first-child 	{ margin-left: 8.7%;  }
+	.row .offset-by-two:first-child 	{ margin-left: 17.4%;  }
+	.row .offset-by-three:first-child 	{ margin-left: 26.1%;  }
+	.row .offset-by-four:first-child 	{ margin-left: 34.8%;  }
+	.row .offset-by-five:first-child 	{ margin-left: 43.5%;  }
+	.row .offset-by-six:first-child 	{ margin-left: 52.2%;  }
+	.row .offset-by-seven:first-child 	{ margin-left: 60.9%;  }
+	.row .offset-by-eight:first-child 	{ margin-left: 69.6%;  }
+	.row .offset-by-nine:first-child 	{ margin-left: 78.3%;  }
+	.row .offset-by-ten:first-child 	{ margin-left: 87%;  }
+	.row .offset-by-eleven:first-child 	{ margin-left: 95.7%;  }
+	
+	/* Source Ordering */
+	.push-two 		{ left: 17.4% }
+	.push-three 	{ left: 26.1%; }
+	.push-four 		{ left: 34.8%; }
+	.push-five 		{ left: 43.5%; }
+	.push-six 		{ left: 52.2%; }
+	.push-seven 	{ left: 60.9%; }
+	.push-eight 	{ left: 69.6%; }
+	.push-nine 		{ left: 78.3%; }
+	.push-ten 		{ left: 87%; }
+	
+	.pull-two 		{ right: 17.4% }
+	.pull-three 	{ right: 26.1%; }
+	.pull-four 		{ right: 34.8%; }
+	.pull-five 		{ right: 43.5%; }
+	.pull-six 		{ right: 52.2%; }
+	.pull-seven 	{ right: 60.9%; }
+	.pull-eight 	{ right: 69.6%; }
+	.pull-nine 		{ right: 78.3%; }
+	.pull-ten 		{ right: 87%; }
+	
+	
+	
+	img, object, embed { max-width: 100%; height: auto; }
+	img { -ms-interpolation-mode: bicubic; }
+	#map_canvas img, .map_canvas img {max-width: none!important;}
+	 
+	 /* Nicolas Gallagher's micro clearfix */
+	 .row:before, .row:after, .clearfix:before, .clearfix:after { content:""; display:table; }
+	 .row:after, .clearfix:after { clear: both; }
+	 .row, .clearfix { zoom: 1; }
+	 
+	 
+	
+	
+/*	--------------------------------------------------
+	:: Block grids
+	
+	These are 2-up, 3-up, 4-up and 5-up ULs, suited
+	for repeating blocks of content. Add 'mobile' to
+	them to switch them just like the layout grid
+	(one item per line) on phones
+	
+	For IE7/8 compatibility block-grid items need to be
+	the same height. You can optionally uncomment the
+	lines below to support arbitrary height, but know
+	that IE7/8 do not support :nth-child.
+	-------------------------------------------------- */
+	
+	.block-grid { display: block; overflow: hidden; }
+	.block-grid>li { display: block; height: auto; float: left; }
+	
+	.block-grid.two-up { margin-left: -4% }
+	.block-grid.two-up>li { margin-left: 4%; width: 46%; }
+/* 	.block-grid.two-up>li:nth-child(2n+1) {clear: left;} */
+	
+	.block-grid.three-up { margin-left: -2% }
+	.block-grid.three-up>li { margin-left: 2%; width: 31.3%; }
+/* 	.block-grid.three-up>li:nth-child(3n+1) {clear: left;} */
+	
+	.block-grid.four-up { margin-left: -2% }
+	.block-grid.four-up>li { margin-left: 2%; width: 23%; }
+/* 	.block-grid.four-up>li:nth-child(4n+1) {clear: left;} */
+	
+	.block-grid.five-up { margin-left: -1.5% }
+	.block-grid.five-up>li { margin-left: 1.5%; width: 18.5%; }
+/* 	.block-grid.five-up>li:nth-child(5n+1) {clear: left;} */
 
-.span-1 {
-	width: $column-width; }
-
-.span-2 {
-	width: $column-width * 2 + $gutter-width; }
-
-.span-3 {
-	width: $column-width * 3 + $gutter-width * 2; }
-
-.span-4 {
-	width: $column-width * 4 + $gutter-width * 3; }
-
-.span-5 {
-	width: $column-width * 5 + $gutter-width * 4; }
-
-.span-6 {
-	width: $column-width * 6 + $gutter-width * 5; }
-
-.span-7 {
-	width: $column-width * 7 + $gutter-width * 6; }
-
-.span-8 {
-	width: $column-width * 8 + $gutter-width * 7; }
-
-.span-9 {
-	width: $column-width * 9 + $gutter-width * 8; }
-
-.span-10 {
-	width: $column-width * 10 + $gutter-width * 9; }
-
-.span-11 {
-	width: $column-width * 11 + $gutter-width * 10; }
-
-.span-12 {
-	width: $column-width * 12 + $gutter-width * 11; }
-
-.suffix-1 {
-	padding-right: $column-width + $gutter-width; }
-
-.suffix-2 {
-	padding-right: $column-width * 2 + $gutter-width * 2; }
-
-.suffix-3 {
-	padding-right: $column-width * 3 + $gutter-width * 3; }
-
-.suffix-4 {
-	padding-right: $column-width * 4 + $gutter-width * 4; }
-
-.suffix-5 {
-	padding-right: $column-width * 5 + $gutter-width * 5; }
-
-.suffix-6 {
-	padding-right: $column-width * 6 + $gutter-width * 6; }
-
-.suffix-7 {
-	padding-right: $column-width * 7 + $gutter-width * 7; }
-
-.suffix-8 {
-	padding-right: $column-width * 8 + $gutter-width * 8; }
-
-.suffix-9 {
-	padding-right: $column-width * 9 + $gutter-width * 9; }
-
-.suffix-10 {
-	padding-right: $column-width * 10 + $gutter-width * 10; }
-
-.suffix-11 {
-	padding-right: $column-width * 11 + $gutter-width * 11; }
-
-.prefix-1 {
-	padding-left: $column-width + $gutter-width; }
-
-.prefix-2 {
-	padding-left: $column-width * 2 + $gutter-width * 2; }
-
-.prefix-3 {
-	padding-left: $column-width * 3 + $gutter-width * 3; }
-
-.prefix-4 {
-	padding-left: $column-width * 4 + $gutter-width * 4; }
-
-.prefix-5 {
-	padding-left: $column-width * 5 + $gutter-width * 5; }
-
-.prefix-6 {
-	padding-left: $column-width * 6 + $gutter-width * 6; }
-
-.prefix-7 {
-	padding-left: $column-width * 7 + $gutter-width * 7; }
-
-.prefix-8 {
-	padding-left: $column-width * 8 + $gutter-width * 8; }
-
-.prefix-9 {
-	padding-left: $column-width * 9 + $gutter-width * 9; }
-
-.prefix-10 {
-	padding-left: $column-width * 10 + $gutter-width * 10; }
-
-.prefix-11 {
-	padding-left: $column-width * 11 + $gutter-width * 11; }
