--- a/frank/stylesheets/scss/sidebar.scss
+++ b/frank/stylesheets/scss/sidebar.scss
@@ -2,8 +2,11 @@
 
 #sidebar {
 	margin-top: $row-height * 4;
-	@include columns(3);
-	float: left;
+	
+	.widget {
+		margin-right:0;
+	}
+	
 	h3 {
 		font-weight: $bold;
 		@include font-size-small();
