--- a/somerandomdude/stylesheets/css/footer.css
+++ b/somerandomdude/stylesheets/css/footer.css
@@ -2,11 +2,15 @@
   border-top: 1px solid #3d302f;
   box-shadow: 0 -1px 1px rgba(5, 0, 0, 0.3); }
 
+#page_footer {
+  padding-top: 0; }
+
 #twitter_follow {
   float: left;
   /*TODO: this feels incredible hacky...*/
   margin-top: -60px;
-  padding-bottom: 60px; }
+  padding-bottom: 60px;
+  margin-left: 0; }
   #twitter_follow p {
     font: italic 20px/30px Georgia, "Times New Roman", Times, serif;
     text-shadow: 0px -1px 0px rgba(5, 0, 0, 0.3); }
@@ -19,39 +23,37 @@
     margin-top: 30px;
     font: 11px/14px "Helvetica Neue", Helvetica, Arial, sans-serif; }
 
-.recommended {
-  width: 470px; }
-  .recommended dt {
-    font: 700 13px/19px "Helvetica Neue", Helvetica, Arial, sans-serif;
-    text-shadow: 0px -1px 0px rgba(5, 0, 0, 0.3);
-    margin-bottom: 2px; }
-  .recommended dd {
-    font: 11px/14px Georgia, "Times New Roman", Times, serif;
-    color: #f0eceb;
-    margin-bottom: 15px; }
+.recommended dt {
+  font: 700 13px/19px "Helvetica Neue", Helvetica, Arial, sans-serif;
+  text-shadow: 0px -1px 0px rgba(5, 0, 0, 0.3);
+  margin-bottom: 2px; }
+.recommended dd {
+  font: 11px/14px Georgia, "Times New Roman", Times, serif;
+  color: #f0eceb;
+  margin-bottom: 15px; }
 
 #text-10 {
   box-shadow: 0px 4px 8px rgba(18, 7, 6, 0.3);
   margin-top: -30px; }
   #text-10 #footer_main_promo {
-    width: 470px;
-    height: 180px;
+    min-height: 180px;
     display: block;
     background-color: #ea0000;
     text-decoration: none; }
     #text-10 #footer_main_promo .sprite.fork {
-      width: 131px;
+      width: 30%;
+      max-width: 131px;
       height: 150px;
       background: url("/wp-content/themes/somerandomdude/images/fork.png?embed=true") no-repeat;
+      background-size: 100%;
       float: left;
       margin-left: 15px; }
     #text-10 #footer_main_promo .content {
       display: block;
-      float: left;
-      width: 250px;
-      margin-left: 23px;
+      float: right;
+      width: 55%;
       padding-top: 30px;
-      padding-right: 10px; }
+      padding-right: 5%; }
       #text-10 #footer_main_promo .content .header {
         font: 20px/30px "Helvetica Neue", Helvetica, Arial, sans-serif;
         display: block;
@@ -65,3 +67,10 @@
 
 #footer_main_promo:hover {
   background-color: #ff1e00 !important; }
+
+@media only screen and  (max-width: 767px) {
+  #twitter_follow {
+    margin-top: 15px; }
+    #twitter_follow a {
+      display: block;
+      margin-left: 0; } }
