--- a/somerandomdude/stylesheets/css/sidebar.css
+++ b/somerandomdude/stylesheets/css/sidebar.css
@@ -1,10 +1,8 @@
 #bio_pic {
-  background: url("/wp-content/themes/somerandomdude/images/profile.png?embed=true") no-repeat;
-  width: 215px;
+  background: url("/wp-content/themes/somerandomdude/images/profile.png?embed=true") no-repeat center center;
+  max-width: 100%;
   height: 160px;
-  text-indent: 100%;
-  white-space: nowrap;
-  overflow: hidden;
+  text-indent: -9999px;
   display: block;
   margin-bottom: 15px;
   box-shadow: 0px 0px 8px rgba(18, 7, 6, 0.3); }
@@ -12,3 +10,13 @@
 aside .widget {
   width: auto;
   margin-right: 0; }
+
+@media only screen and  (max-width: 767px) {
+  #bio_pic {
+    font: 17px/27px "Helvetica Neue", Helvetica, Arial, sans-serif;
+    color: #5d504f;
+    background: none;
+    width: auto;
+    height: auto;
+    text-indent: 0;
+    box-shadow: none; } }
