--- a/somerandomdude/stylesheets/scss/sidebar.scss
+++ b/somerandomdude/stylesheets/scss/sidebar.scss
@@ -1,20 +1,33 @@
 @import "variables";
 
 #bio_pic { 
-	background:url('/wp-content/themes/somerandomdude/images/profile.png?embed=true') no-repeat;
-	@include columns(3);
+	background:url('/wp-content/themes/somerandomdude/images/profile.png?embed=true') no-repeat center center;
+	
+	max-width:100%;
 	height:160px;
-	text-indent: 100%;
-	white-space: nowrap;
-	overflow: hidden;
+	
+	text-indent:-9999px;
 	display:block;
 	margin-bottom:$row-height;
 	@include default-shadow();
+
 }
 
 aside {
 	.widget {
 		width:auto;
 		margin-right:0;
+	}
+}
+
+@media only screen and  (max-width: 767px) {
+	#bio_pic {
+		font: $font-medium $sans-serif;
+		color:$color_midtone; 
+		background:none;
+		width:auto;
+		height:auto;
+		text-indent:0;
+		box-shadow:none;
 	}
 }
