--- a/somerandomdude/stylesheets/css/footer.css
+++ b/somerandomdude/stylesheets/css/footer.css
@@ -73,4 +73,7 @@
     margin-top: 15px; }
     #twitter_follow a {
       display: block;
-      margin-left: 0; } }
+      margin-left: 0; }
+
+  #text-10 #footer_main_promo .content {
+    padding-top: 15px; } }
