--- a/frank/stylesheets/css/index.css
+++ b/frank/stylesheets/css/index.css
@@ -11,9 +11,9 @@
     margin-left: 10px; }
   #content.home .content-header .more {
     font-family: Georgia, "Times New Roman", Times, serif; }
-#content.home .content.oneup .post .read-more, #content.home .content.oneup.large .post .read-more, #content.home .content.twoup .post .read-more, #content.home .content.fourup .post .read-more, #content.home .content.halfandhalf .post .read-more {
+#content.home .content.oneup .post .read-more, #content.home .content.twoup .post .read-more, #content.home .content.threeup .post .read-more, #content.home .content.fourup .post .read-more {
   margin-top: 15px; }
-  #content.home .content.oneup .post .read-more .more, #content.home .content.oneup.large .post .read-more .more, #content.home .content.twoup .post .read-more .more, #content.home .content.fourup .post .read-more .more, #content.home .content.halfandhalf .post .read-more .more {
+  #content.home .content.oneup .post .read-more .more, #content.home .content.twoup .post .read-more .more, #content.home .content.threeup .post .read-more .more, #content.home .content.fourup .post .read-more .more {
     font-size: 11px;
     line-height: 14px; }
 #content.home .content.oneup.large article header h1 {
@@ -25,33 +25,51 @@
     font-style: italic;
     font-size: 38px;
     line-height: 47px; }
-#content.home .content.twoup .post, #content.home .content.fourup .post {
-  float: left;
-  margin: 15px 40px 0 0; }
-  #content.home .content.twoup .post header h1, #content.home .content.fourup .post header h1 {
+#content.home .content.twoup .post, #content.home .content.threeup .post, #content.home .content.fourup .post {
+  margin-top: 15px; }
+  #content.home .content.twoup .post header h1, #content.home .content.threeup .post header h1, #content.home .content.fourup .post header h1 {
     font-size: 13px;
     line-height: 19px;
     font-weight: 700; }
-    #content.home .content.twoup .post header h1 a, #content.home .content.fourup .post header h1 a {
+    #content.home .content.twoup .post header h1 a, #content.home .content.threeup .post header h1 a, #content.home .content.fourup .post header h1 a {
       text-decoration: none; }
-  #content.home .content.twoup .post section, #content.home .content.fourup .post section {
+  #content.home .content.twoup .post section p, #content.home .content.threeup .post section p, #content.home .content.fourup .post section p {
     font-size: 13px;
     line-height: 19px; }
-#content.home .content.twoup .metadata li, #content.home .content.fourup .metadata li {
+#content.home .content.twoup .metadata li, #content.home .content.threeup .metadata li, #content.home .content.fourup .metadata li {
   font-size: 11px;
   line-height: 14px; }
+#content.home .content.twoup .post {
+  float: left !important; }
 #content.home .content.twoup .post:nth-child(2n+1) {
+  margin-left: 0;
   clear: left; }
 #content.home .content.twoup .post:nth-child(2n) {
-  margin-right: 0; }
+  margin-right: 0;
+  float: right; }
 #content.home .content.twoup .post:nth-child(n+3) {
   margin-bottom: 0;
   margin-top: 45px; }
+#content.home .content.fourup .post {
+  float: left !important; }
 #content.home .content.fourup .post:nth-child(4n+1) {
+  margin-left: 0;
   clear: left; }
 #content.home .content.fourup .post:nth-child(4n) {
-  margin-right: 0; }
+  margin-right: 0;
+  float: right; }
 #content.home .content.fourup .post:nth-child(n+5) {
+  margin-bottom: 0;
+  margin-top: 45px; }
+#content.home .content.threeup .post {
+  float: left !important; }
+#content.home .content.threeup .post:nth-child(3n+1) {
+  margin-left: 0;
+  clear: left; }
+#content.home .content.threeup .post:nth-child(3n) {
+  margin-right: 0;
+  float: right; }
+#content.home .content.threeup .post:nth-child(n+4) {
   margin-bottom: 0;
   margin-top: 45px; }
 
