--- a/frank/stylesheets/scss/header.scss
+++ b/frank/stylesheets/scss/header.scss
@@ -7,6 +7,7 @@
 		margin:$row-height 0 $row-height * 2 0;
 		
 		h1 { font-size: $large; }
+		h2 { margin-top:0; }
 		nav {
 			.menu {
 				ul { list-style: none; }
@@ -18,7 +19,7 @@
 						display: block;
 						height: $row-height;
 						color: $color_off_black;
-						font: $font-x-small $sans-serif;
+						font: $bold $font-x-small $sans-serif;
 					}
 					a:hover { color: $color_midtone; } 
 				}
