--- a/frank/stylesheets/scss/widgets.scss
+++ b/frank/stylesheets/scss/widgets.scss
@@ -7,16 +7,19 @@
 	    overflow: hidden;
 	    text-overflow: ellipsis;
 	    -o-text-overflow: ellipsis;
-	}
-	float: left;
-	
+	}	
 	margin-bottom:$row-height;
 }
 
-.widget.fourup:nth-child(4n) { margin-right:0; }
-.widget.fourup:nth-child(4n+1) { clear:left; }
-.widget.threeup:nth-child(3n) { margin-right:0; }
-.widget.threeup:nth-child(3n+1) { clear:left; }
-.widget.twoup:nth-child(2n) { margin-right:0; }
-.widget.twoup:nth-child(2n+1) { clear:left; }
-.widget-last { margin-right: 0 !important; }
+.widget.six.columns, .widget.three.columns, .widget.four.columns {
+	float:left !important;
+}
+
+.widget.six.columns:nth-child(2n+1), .widget.three.columns:nth-child(4n+1), .widget.four.columns:nth-child(3n+1) {
+	margin-left:0;
+	clear: left; 
+}
+.widget.six.columns:nth-child(2n), .widget.three.columns:nth-child(4n), .widget.four.columns:nth-child(3n)  {
+	margin-right: 0; 
+	float:right;
+}
